// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputRow disabled 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 jIWIJD"
        disabled=""
        name="Name"
        rows="2"
        type="text"
        value="value"
      />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow error 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 iXjCqF"
        name="Name"
        rows="2"
        type="text"
        value="value"
      />
      <p
        class="InputRowstyle__Error-jt7egi-1 fFLVnQ"
      >
        error message
      </p>
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow field 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 jIWIJD"
        name="Name"
        rows="2"
        type="text"
        value="value"
      />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow label 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <label
        class="InputRowstyle__Label-jt7egi-0 gfNopZ"
      >
        Label
      </label>
      <input
        class="Input-lswqho-0 jIWIJD"
        name="Name"
        rows="2"
        type="text"
        value="value"
      />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow placeholder 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 jIWIJD"
        name="Name"
        placeholder="placeholder here"
        rows="2"
        type="text"
        value=""
      />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow playground 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <label
        class="InputRowstyle__Label-jt7egi-0 gfNopZ"
      >
        example
      </label>
      <input
        class="Input-lswqho-0 iXjCqF"
        disabled=""
        name="Name"
        placeholder="placeholder here"
        rows="2"
        type="text"
        value="value"
      />
      <p
        class="InputRowstyle__Error-jt7egi-1 fFLVnQ"
      >
        error
      </p>
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots InputRow type 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div>
      type = text
    </div>
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 jIWIJD"
        name="Name"
        rows="2"
        type="text"
        value="value"
      />
    </div>
    <div>
      type = password
    </div>
    <div
      class="InputRowstyle__Row-jt7egi-2 dOntYq"
    >
      <input
        class="Input-lswqho-0 jIWIJD"
        name="Name"
        rows="2"
        type="password"
        value="value"
      />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;
